--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.50.1",
     "react-spinners": "^0.13.8",
     "react-toastify": "^10.0.4",
     "router": "^1.3.8"
