--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,8 @@
     "react-hook-form": "^7.50.1",
     "react-spinners": "^0.13.8",
     "react-toastify": "^10.0.4",
-    "router": "^1.3.8"
+    "router": "^1.3.8",
+    "sass": "^1.71.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
