--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
@@ -18,8 +19,6 @@
     "moment": "^2.30.1",
     "mongoose": "^5.13.22",
     "nodemon": "^2.0.12",
-    "router": "^1.3.5",
-    "stripe": "^8.169.0",
-    "uuid": "^8.3.2"
+    "router": "^1.3.5"
   }
 }
