--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,18 +10,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.1",
     "antd": "^5.14.2",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.3",
+    "dotenv": "^16.4.5",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
+    "react-redux": "^9.1.0",
     "react-spinners": "^0.13.8",
     "react-toastify": "^10.0.4",
+    "redux": "^5.0.1",
     "router": "^1.3.8",
-    "sass": "^1.71.1"
+    "sass": "^1.71.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
