--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
+    "react-dotenv": "^0.1.3",
     "react-hook-form": "^7.50.1",
     "react-redux": "^9.1.0",
     "react-spinners": "^0.13.8",
