--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,15 +12,18 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.1",
     "antd": "^5.14.2",
+    "aos": "^2.3.4",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.3",
     "dotenv": "^16.4.5",
+    "flowbite": "^2.3.0",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
     "react-dotenv": "^0.1.3",
     "react-hook-form": "^7.50.1",
+    "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
     "react-spinners": "^0.13.8",
     "react-toastify": "^10.0.4",
@@ -38,6 +41,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "react-router-dom": "^6.22.1",
+    "tailwindcss": "^3.4.1",
     "vite": "^5.1.4"
   }
 }
